# p-cpp-study

./: .gitmessage.txt  CMakeLists.txt  README.md  commit_message_20250811.md  compile_character_test.sh  comprehensive_input.txt  input_for_test.txt  main  note.txt  test_all_characters.cpp  test_character_simple.cpp  test_interactive_character.cpp  test_simple.cpp  test_while_loop.sh
asset/article/: cpp_symbol_resolution.md
asset/python/: main.py  util.py
docs/: character_system_summary.md  character_tdd_testing_guide.md  development_environment_guide.md  integration_refactoring_strategy.md  refactoring_todo.md  tdd_refactoring_guide.md  visualization_guide.md  vscode-git-commit-setup.md  while_loop_compilation_guide.md  while_loop_compilation_summary.md  while_loop_tdd_summary.md  while_loop_tdd_testing_guide.md
docs/reports/: summary.md
history/: character_system_completion_20250730.md  character_system_development_20250730.md  character_system_integration_20250730.md  character_system_integration_20250811.md  refactor_20250726.md
prompt/: variable_input_type_operator.md
scripts/: compile_while_loop_programs.sh  date_validation.sh  generate_reports.sh  manage_test_reports.sh  run_character_tdd_tests.sh  run_tdd_refactoring.sh  run_while_loop_tests.sh  xml_to_html.py
src/: init  init.cpp
src/01.beggin/: main  main.cpp  util.cpp
src/02.syntax_output_commnets/: _comment_mission_6.cpp  _output_mission  _output_quiz.cpp  _statements.cpp  _syntax.cpp
src/03.variable_user_input_data_type_operators/: Comprehensive_Learning  compile_and_run.sh
src/catmario/: CMakeLists.txt  README.md  (+2 more)
src/gamification/: CMakeLists.txt  CharacterDefinitionProgram.cpp  CharacterSelector.cpp  CharacterSelector.h  main.cpp
tests/: test_character_personality.cpp  test_character_personality_improved.cpp  test_character_system.cpp  test_gamification_system.cpp  test_learning_modules.cpp  test_mission_system.cpp  test_quiz_system.cpp  test_utils.cpp  test_while_loop_gemini.cpp  test_while_loop_gpt.cpp
(+166 files in other folders)
